LPS-46809 - Fix dockbar add panel page layout overflow

--- a/portal-web/docroot/html/css/portal/add_content.css
+++ b/portal-web/docroot/html/css/portal/add_content.css
@@ -6,12 +6,13 @@
 
 	.add-content-menu .lfr-add-page-toolbar {
 		bottom: 0;
+		left: 0;
 		margin-bottom: 0;
 		margin-top: 0;
 		padding: 10px 15px;
 		position: fixed;
 		text-align: right;
-		width: 295px;
+		width: 315px;
 	}
 
 	.lfr-page-template-description {
